# Study

./: README.md
Challenges/CV/: .gitignore  README.docx  clean.ps1
Challenges/CV/BigNum/: HPC_CodingProblem.doc  Method.txt
Challenges/CV/BigNum/Algo/: FindAlgo.cmake
Challenges/CV/BigNum/Algo/Project/include/: Algo.h  Segment.h
Challenges/CV/BigNum/Algo/Project/src/: Algo.cpp  Segment.cpp
Challenges/CV/BigNum/CLI/: Numbers.txt
Challenges/CV/BigNum/CLI/Solution/include/: Args.h
Challenges/CV/BigNum/CLI/Solution/src/: main.cpp
Challenges/CV/BigNum/GUI/: CMakeLists.txt  install.ps1  test.txt
Challenges/CV/BigNum/GUI/Solution/: files.qrc
Challenges/CV/BigNum/GUI/Solution/controller/include/: Core.h
Challenges/CV/BigNum/GUI/Solution/controller/src/: Core.cpp  main.cpp
Challenges/CV/BigNum/GUI/Solution/resource/exe/: pic.rc
Challenges/CV/BigNum/GUI/Solution/view/: main.qml
Challenges/CV/BigNum/GUI/Solution/view/JavaScript/: Action.js
Challenges/CV/CSVtoJSON/: Pipeline_CodingProblem - v2.doc
Challenges/CV/CSVtoJSON/C++/: CMakeLists.txt
Challenges/CV/CSVtoJSON/C++/Solution/src/: main.cpp
Challenges/CV/CSVtoJSON/Python/: CSVtoJSON.py
Challenges/CV/CSVtoJSON/Python/csv/: small.csv
Challenges/CV/CSVtoJSON/Python/json/: pipeline_input_user_export.json  small.json
Challenges/CV/Cmake/: PS_Builder.ps1  Run_CMake.ps1
Challenges/CV/Cmake/Modules/: FindWt.cmake  Radical-Functions.cmake  Radical-Lib-Install.cmake  Radical-Static-Vars.cmake
Challenges/CV/Cmake/Radicalware/Libraries/: clear_libs.ps1
Challenges/CV/Cmake/Radicalware/Libraries/Headers/: Color.h  vertex.h
Challenges/CV/Cmake/Radicalware/Libraries/Projects/Nexus/include/: Nexus.h  Nexus_void.h
Challenges/CV/Cmake/Radicalware/Libraries/Projects/xstring/include/: Color.h
Sanitize/: CMakeLists.txt
Sanitize/include/: ac.h  re.h
Sanitize/src/: main.cpp  re.cpp
Study/TypeErasure/: Decay.cpp
